--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -5,13 +5,13 @@ endi:
   image_url: https://github.com/endiliey.png
 
 yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
+  name:  Pierre-Emmanuel Guerrin
+  title: Tech Lead @ Supercomputing Centre, Ecole Centrale Nantes
+  url: https://sebastienlorber.com
   image_url: https://github.com/yangshun.png
 
 slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
+  name: Junaid MIR
+  title: AI/HPC Engineer @ Supercomputing Centre, Ecole Centrale Nantes 
+  url: https://github.com/mirjunaid26 
   image_url: https://github.com/slorber.png
